# TFT_CP

./: pyproject.toml  tft.md  tft_cp.ipynb  tft_pl.py
